Change conditional for version hold

--- a/task_install-from-repo.yml
+++ b/task_install-from-repo.yml
@@ -38,7 +38,5 @@
 - include_tasks: task_hold-pkg.yml
   vars:
     hold_pkg_name: "{{ item }}"
-  when:
-    - install_from_repo_state == present
-    - install_from_repo_hold | default (false)
+  when: (install_from_repo_state == 'present') and (install_from_repo_hold | default (false))
   with_items: "{{ install_from_repo_packages }}"
