--- a/task_tmpfs-disk.yml
+++ b/task_tmpfs-disk.yml
@@ -1,5 +1,10 @@
 ---
-
-- name: Configure memory-based tmpfs disk
-  mount: name={{ tmpfs_disk_mount }} src=tmpfs fstype=tmpfs state=mounted opts=size={{ tmpfs_disk_size }}
+- name: "Configure memory-based tmpfs disk"
+  become: yes
+  mount:
+    name: "{{ tmpfs_disk_mount }}"
+    src: tmpfs
+    fstype: tmpfs
+    state: mounted
+    opts: "size={{ tmpfs_disk_size }}"
   notify: "{{ tmpfs_disk_handler | default(omit) }}"
