--- a/task_firewalld-zone.yml
+++ b/task_firewalld-zone.yml
@@ -23,6 +23,7 @@
 #
 ---
 - name: "Delete firewalld config dirs"
+  become: yes
   file:
     path: "{{ item }}"
     state: absent
@@ -32,6 +33,7 @@
   when: firewalld_zone_only
 
 - name: "Create firewalld config dirs"
+  become: yes
   file:
     path: "{{ item }}"
     state: directory
@@ -44,6 +46,7 @@
   when: firewalld_zone_only
 
 - name: "Generate zone file :: {{ firewalld_zone_name }}"
+  become: yes
   copy:
     content: |
       <?xml version="1.0" encoding="utf-8"?>
@@ -61,6 +64,7 @@
     mode: "u=rw,g=r,o=r"
 
 - name: "Generate ipset file :: {{ firewalld_zone_name }}"
+  become: yes
   copy:
     content: |
       <?xml version="1.0" encoding="utf-8"?>
@@ -75,6 +79,7 @@
     mode: "u=rw,g=r,o=r"
 
 - name: "Set DROP zone as default for all interfaces"
+  become: yes
   lineinfile:
     dest: /etc/firewalld/firewalld.conf
     regexp: '^DefaultZone=(.*)$'
@@ -82,12 +87,14 @@
     state: present
 
 - name: "Reload firewalld"
+  become: yes
   service:
     name: firewalld
     state: reloaded
     enabled: yes
 
 - name: "Ensure firewalld is running"
+  become: yes
   service:
     name: firewalld
     state: started
