--- a/task_gen-systemd-unit.yml
+++ b/task_gen-systemd-unit.yml
@@ -11,6 +11,7 @@
 ---
 # Generate service unit definition for systemd
 - name: "Create systemd unit for {{ gen_systemd_unit_name }}"
+  become: yes
   copy:
     content: |
       [Service]
@@ -32,5 +33,6 @@
     mode:  "u=rw,g=r,o=r"
 
 - name: "Reload systemd"
+  become: yes
   systemd:
     daemon_reload: yes
