--- a/task_update-distro.yml
+++ b/task_update-distro.yml
@@ -2,6 +2,7 @@
 
 # Update APT cache and perform "smart" dist-upgrade
 - name: Update OS (apt)
+  become: yes
   apt:
     update_cache: yes
     cache_valid_time: 86400 #seconds, 86400s = 1d
@@ -10,6 +11,7 @@
 
 # Update YUM cache and perform upgrade
 - name: Update OS (yum)
+  become: yes
   yum:
     update_cache: yes
     name: "*"
